--- a/main.html
+++ b/main.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Facebook Login Page</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <div class="container">
+    <div class="left-section">
+      <h1 class="facebook-logo">facebook</h1>
+      <p class="facebook-description">Facebook helps you connect and share with the people in your life.</p>
+    </div>
+    <div class="right-section">
+      <div class="login-form">
+        <input type="text" placeholder="Email address or phone number" class="input-field">
+        <input type="password" placeholder="Password" class="input-field">
+        <button class="login-button">Log in</button>
+        <a href="#" class="forgot-account">Forgotten account?</a>
+        <button class="create-account-button">Create new account</button>
+      </div>
+    </div>
+  </div>
 </body>
-
 </html>
