--- a/main.html
+++ b/main.html
@@ -14,11 +14,11 @@
     </div>
     <div class="right-section">
       <div class="login-form">
-        <input type="text" placeholder="Email address or phone number" class="input-field">
-        <input type="password" placeholder="Password" class="input-field">
-        <button class="login-button">Log in</button>
+        <input type="text" id="email" placeholder="Email address or phone number" class="input-field">
+        <input type="password" id="password" placeholder="Password" class="input-field">
+        <button class="login">Log in</button>
         <a href="#" class="forgot-account">Forgotten account?</a>
-        <button class="create-account-button">Create new account</button>
+        <button class="signup">Create new account</button>
       </div>
     </div>
   </div>
